# cloud-kmeans

./: Main.hs_  README.md  cabal.sample  cloud-kmeans.cabal  run.sh  stack.yaml
src/: KMeansCore.hs  Main.hs  PointSum.hs
