name:                cloud-kmeans
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/cloud-kmeans#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable cloud-kmeans-exe
  hs-source-dirs:      src
  other-modules:       KMeansCore
                       PointSum
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -O2
  build-depends:       base
                     , cloud-kmeans
                     , binary
                     , deepseq
                     , bytestring
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , network-transport-tcp
                     , time
                     , deepseq
                     , monad-par
                     , array
                     , vector
                     , parallel
                     , unix
  default-language:    Haskell2010
  extensions:          BangPatterns, CPP, TemplateHaskell

test-suite cloud-kmeans-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cloud-kmeans
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cloud-kmeans
